--- a/grid/inputfields.css
+++ b/grid/inputfields.css
@@ -15,13 +15,18 @@
 }
 .Inputfield > .ui-widget-content{
 	border: 0;
-	padding: 0 0.8em !important;
+	padding: 0 !important;
 	margin: 0; 
 }
+.InputfieldRadios > .ui-widget-content,
+.InputfieldFormBuilderFile > .ui-widget-content{
+	padding: 0 0.8em 0.4em !important;
+}
+
 .Inputfield > .ui-widget-header{
 	padding: 0.6em 0.8em !important;
 	text-transform: uppercase;
-	color: #888;
+	color: #777;
 }
 
 .Inputfield.InputfieldColumnWidth{
@@ -111,7 +116,7 @@ form.InputfieldForm {
 
 input, select, textarea{
 	border: 0 !important;
-	padding: 0.6em 0 !important;
+	padding: 0.6em 0.8em !important;
 	background-color: transparent;
 	-webkit-box-shadow: none;
 	-moz-box-shadow: none;
